# univermec

./: .gitignore  Doxyfile  Makefile.am  README  README.md  autogen.sh  build-mk.sh  config_template.global  configure.ac  configure.scan  create-debug.sh  recreate-build-system.sh  rfunktionen.txt  styleguide.txt  univermec-gdb.py  univermec.pc.in
build-files/: adapter_files.mk  include_files.mk  interfaces_files.mk  poly_files.mk  src_files.mk  src_files.mk~  swg_files.mk
inc/: static_config.hpp
inc/algorithm/: ialgobserver.hpp  idistobserver.hpp
inc/algorithm/epsdistance/: epsdistance.hpp  nodeprox.hpp
inc/algorithm/opt-lib/: argumentwrapper.hpp  boundconstraint.hpp  checkjohn.hpp  defaultstrategy.hpp  exception.hpp  gaussjordan.hpp  general.hpp  general.inl  globalcriteria.hpp  globoptalgo.hpp  globoptalgo.inl  globoptobserver.hpp  helper.hpp  helper.inl  ioptstrategy.hpp  johnconstraint.hpp  linbound.hpp  linesearch.hpp  local_state.hpp  newtonstep.hpp  optbox.hpp  optenv.hpp  simplefunction.hpp  stratele.hpp  types.hpp  verification.hpp
inc/algorithm/opt-lib/strategies/: bcconstraints.hpp  bcgrad.hpp  bcubound.hpp  bounder.hpp  feas.hpp  iliebounder.hpp  ilieconstraints.hpp  midpoint.hpp  uubound.hpp
inc/algorithm/utils/: upperbound.hpp
inc/core/: aaferrorterm.inl  arithconcept.hpp  arithcore.hpp  boostadapt.hpp  box.hpp  conversion.hpp  core_exception.hpp  cxsccomp.hpp  cxsccomp.inl  doubleadapt.hpp  gappedbox.hpp  interval_util.hpp  mrealadapt.hpp  riotadapt.hpp  roundingcontrol.hpp
inc/decomp/: contractingtree.hpp  decomputil.hpp  iboxlistmgr.hpp  idirweight.hpp  iivtree.hpp  imultisection.hpp  iordering.hpp  ipointchooser.hpp  itree.hpp  itreenode.hpp  midchooser.hpp  midchooser.inl  nodecolors.hpp  polytree.hpp  queuemgr.hpp  queuemgr.inl  ratzsection.hpp  ratzsection.inl  sivtree.hpp  sivtree.inl  sortedlistmgr.hpp  sortedlistmgr.inl  sparamtree.hpp  syncivtree.hpp  weightmw.hpp  weightmw.inl  weightratz92.hpp  weightratz92.inl
inc/extras/interfaces/: interface_exception.hpp
inc/extras/interfaces/ipopt/: tnlpwrapper.hpp
inc/extras/interfaces/ode/: ode-eq.hpp  ode.hpp
inc/extras/shapes/: superquadric.hpp
inc/functions/: funcstrucconcept.hpp  functionexceptions.hpp  functionhelper.hpp  icontractor.hpp  icustomconsistency.hpp  icustomencl.hpp  iderivative.hpp  iencl.hpp  iffeatures.hpp  ifunction.hpp  igpueval.hpp  igpufuture.hpp  islope.hpp  itaylorcoeff.hpp  ivfunction.hpp
inc/functions/contractors/: bccontract.hpp
inc/functions/details/: autodiff.hpp  cdwrap.hpp  customconstimpl.hpp  fcustomconst.hpp  fcustomconst.inl  fderiv.hpp  fderiv.inl  fgpueval.hpp  fgpueval.inl  fgradfun.hpp  fgradfun.inl  fjoin.hpp  fjoin.inl  flinchainrule.hpp  fmaster.hpp  ftaylorcoeff.hpp  ftaylorcoeff.inl  fvbase.hpp  fvbase.inl  gpufutureimpl.hpp  igpuhost.hpp  igpuhostfuture.hpp  isscalarfunctor.hpp
inc/functions/enclosures/: ilieencl.hpp  meanvalue.hpp  nencl.hpp
inc/functions/parser/: functionparser.hpp
inc/ivp/: iivp.hpp
inc/ivp/details/: dummyu.hpp  ivpimpl.hpp
inc/objects/: csgfactories.hpp  csgnode.hpp  icsgnode.hpp  icsgnodefactory.hpp  igeoobj.hpp  implsurface.hpp  iparamsurface.hpp  iparamtrans.hpp  paramsurface.hpp
inc/objects/csg/: csgnodeimpl.hpp  csgnodeimpl.inl  standardcsgnodefactory.hpp  standardcsgops.hpp  standardcsgops.inl
inc/objects/details/: implnormals.hpp  paramnormals.hpp
inc/objects/param/: parambendtrans.hpp  paramleaf.hpp  paramlintrans.hpp  paramtapertrans.hpp
inc/objects/poly/: iconvexpoly.hpp  inonconvexpoly.hpp  ompoly.hpp  openmesh_types.hpp
inc/tests/: lorenzivp.hpp  test_deriv.hpp  test_globopt.hpp  test_taylor.hpp  test_vnode.hpp
inc/utility/: debug_helper.hpp  fadbad_helper.hpp  iterator_helper.hpp  iterator_helper.inl  make_unique.hpp  trans_mat.hpp  trans_mat.inl  utility.hpp  utility.inl
interfaces/: contractors.i  csgfactories.i  decomputil.i  enclosures.i  epsdistance.i  functionparser.i  icsgnode.i  icsgnodefactory.i  idistobserver.i  ifunction.i  igeoobj.i  iivtree.i  implsurface.i  intervaladapt.i  itree.i  ivp.i  mrealadapt.i  mtl.i  scenegraph.i  trees.i  univermecext.i
m4/: autotroll.m4  ax_check_gl.m4  ax_ext_check_header.m4  ax_ext_have_lib.m4  ax_pkg_swig.m4  boost.m4  cuda.m4  cxsc.m4  search_header.m4
patches/: badiff.h.patch  fadbad.h.patch
src/algorithm/epsdistance/: epsdistance.cpp  nodeprox.cpp
src/algorithm/opt-lib/: boundconstraint.cpp  checkjohn.cpp  defaultstrategy.cpp  gaussjordan.cpp  general.cpp  globalcriteria.cpp  globoptalgo.cpp  globoptobserver.cpp  helper.cpp  johnconstraint.cpp  linbound.cpp  linesearch.cpp  newtonstep.cpp  optbox.cpp  simplefunction.cpp  verification.cpp
src/algorithm/utils/: upperbound.cpp
src/core/: arithtraits.cpp  arithtraits.m4  box.cpp  fadbadadapt.m4  interval_util.cpp  riotadapt.cpp  roundingcontrol.cpp
src/core/adapters/: adapters.m4  baseadapter.m4  basetemplate.m4  cosyadapt.m4  cxscadapt.m4  doubleadapt.m4  profiladapt.m4  riotadapt.m4  yalaaadapt.m4
src/decomp/: contractingtree.cpp  decomputil.cpp  itree.cpp  polytree.cpp  sivtree.cpp  sparamtree.cpp  syncivtree.cpp
src/extras/shapes/: superquadric.cpp
src/functions/: functionhelper.cpp
src/functions/contractors/: bccontract.cpp
src/functions/details/: cdwrap.cpp  customconstimpl.cpp  flinchainrule.cpp  gpufutureimpl.cpp
src/functions/enclosures/: ilieencl.cpp  meanvalue.cpp  nencl.cpp
src/functions/parser/: functionparser.cpp  parser.inl
src/ivp/details/: dummyu.cpp  ivpimpl.cpp
src/objects/: csgfactories.cpp  implsurface.cpp  paramsurface.cpp
src/objects/csg/: csgnodeimpl.cpp  standardcsgnodefactory.cpp  standardcsgops.cpp
src/objects/details/: implnormals.cpp  paramnormals.cpp
src/objects/param/: parambendtrans.cpp  paramleaf.cpp  paramlintrans.cpp  paramtapertrans.cpp
src/objects/poly/: convexpolyhedron.cpp  convexpolyhedron.inl  nonconvexpolyhedron.cpp  nonconvexpolyhedron.inl  ompoly.cpp
src/tests/: lorenzivp.cpp  test_deriv.cpp  test_globopt.cpp  test_taylor.cpp  test_vnode.cpp
src/utility/: trans_mat.cpp  utility.cpp
(+21 files in other folders)
